align bug fixe and footer added

--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -5,3 +5,7 @@
   margin: 0;
   //   position: relative;
 }
+
+a {
+  text-decoration: none;
+}
