--- a/Sass/base/_colors.scss
+++ b/Sass/base/_colors.scss
@@ -2,6 +2,4 @@ $main-color: #1d1a1c;
 $secondary-color: #7e7e7e;
 $success-main-color: #ed1d24;
 $success-secondary-color: #951e22;
-$contrast-color: #fafafa;
-
-/*Tmb puedo usar #E9C22B y #753E58 si fuera necesario*/
+$contrast-color: #d3d3d3;
