--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -3,4 +3,5 @@ main {
   @extend %flex-column;
   width: 100%;
   max-width: 1200px;
+  margin: 0 auto;
 }
